Update and rename index.html.html to index.html

--- a/weather/index.html
+++ b/weather/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="whather.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <title>Hello, world!</title>
+    <title>Weather Api</title>
   </head>
   <body class="bg-dark">
     <input type="text " class="form-control search " placeholder="First name" aria-label="First name" value="delhi">
